resolved the icon not aligned horizontally issue

--- a/ui.apps/src/main/content/jcr_root/apps/plweb-dsys/components/header/v1/header/clientlibs/css/header.less
+++ b/ui.apps/src/main/content/jcr_root/apps/plweb-dsys/components/header/v1/header/clientlibs/css/header.less
@@ -166,7 +166,6 @@
                 gap: @16;
             });
             .element(icon-link,{
-                padding-top: @4;
                 margin-bottom: 0;
             });
             .modifier(no-icon-link,{
